--- a/contao/templates/be_services.html5.twig
+++ b/contao/templates/be_services.html5.twig
@@ -18,5 +18,5 @@
 	</table>
 
 	<br><br>
-	<div>This extension use icons from the <a href="http://www.famfamfam.com/" target="_blank">famfamfam silk icons</a>.</div>
+	<div>This extension uses icons from the <a href="http://www.famfamfam.com/" target="_blank">famfamfam silk icons</a>.</div>
 </div>
